--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -16,7 +16,7 @@ targets=['x86_64-unknown-linux-gnu']
 default-features=false
 features        =['derive']
 package         ='parity-scale-codec'
-version         ='3.0.0'
+version         ='3.2.1'
 
 [dependencies.frame-benchmarking]
 default-features=false
@@ -52,11 +52,16 @@ branch          ="polkadot-v0.9.30"
 version         ="6.0.0"
 
 [dependencies]
-pallet-staking={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-sp-runtime    ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
-sp-core       ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
-serde         ={ version="1.0.147" }
+pallet-staking   ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-runtime       ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-std           ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
+sp-core          ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
+sp-consensus-babe={ version="0.10.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+log              ={ version="0.4.0", default-features=false }
+pallet-session   ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-staking       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-common ={ path="../../crypto/substrate-common", default-features=false }
+serde            ={ version="1.0.147" }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -79,8 +84,13 @@ std=[
   'sp-runtime/std',
   "sp-std/std",
   'pallet-staking/std',
+  'pallet-session/std',
   'pallet-balances/std',
   'frame-benchmarking/std',
   "sp-npos-elections/std",
+  "sp-staking/std",
+  "sp-consensus-babe/std",
+  'log/std',
+
 ]
 try-runtime=['frame-support/try-runtime']
