--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -6,6 +6,8 @@ edition="2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror="1.0"
+
 # parsing
 serde       ="1.0.147"
 serde_json  ="1.0"
