--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name   ="constraints"
+name   ="entropy-constraints"
 version="0.1.0"
 edition="2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror="1.0"
+
+# parsing
+serde       ="1.0.147"
+serde_json  ="1.0"
+serde_derive="1.0.147"
+
+# EVM
+web3={ version="0.17.0", default-features=false }
