--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -19,6 +19,7 @@ hex                ="*"
 reqwest-eventsource="0.4"
 k256               ={ version="0.10", features=["serde", "ecdsa"] }
 hex-literal        ="0.3.4"
+serde_derive       ="1.0.147"
 
 # Async
 futures="0.3"
