--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -12,6 +12,7 @@ thiserror="1.0"
 serde       ="1.0.147"
 serde_json  ="1.0"
 serde_derive="1.0.147"
+substrate-common   ={ path="../substrate-common", default-features=false }
 
 # EVM
 web3={ version="0.17.0", default-features=false }
