--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -5,7 +5,7 @@ edition="2021"
 
 [dependencies]
 # Common
-serde              ={ version="1.0", features=["derive"] }
+serde              ={ version="1.0", default-features=false, features=["derive"] }
 serde_json         ="1.0"
 anyhow             ="1.0.53"
 thiserror          ="1.0.31"
