--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -42,7 +42,7 @@ default-features=false
 features        =['derive']
 version         ='2.0.1'
 
-[dev-dependencies.sp-core]
+[dependencies.sp-core]
 default-features=false
 git             ='https://github.com/paritytech/substrate.git'
 branch          ="polkadot-v0.9.30"
