--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,4 @@
 panic='unwind'
 
 [workspace]
-members=[
-  'crypto/*',
-  'node/*',
-  'pallets/*',
-  'runtime',
-]
+members=['crypto/*', 'node/*', 'pallets/*', 'runtime']
