--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       ="entropy-protocol"
-description="Signing and DKG protocols for Entropy"
+description="Entropy Signing and DKG protocol execution and transport logic"
 version    ="0.0.1"
 edition    ="2021"
 license    ="AGPL-3.0-or-later"
@@ -13,6 +13,7 @@ synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="
 serde              ={ version="1.0", features=["derive"] }
 subxt              ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0" }
 sp-core            ={ version="21.0.0", default-features=false }
+# TODO rm tokio features that dont play nice with wasm
 tokio              ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 x25519-dalek       ="2.0.0-pre.1"
 futures            ="0.3"
@@ -25,7 +26,7 @@ snow               ="0.9.2"
 axum       ={ version="0.6.18", features=["ws"], optional = true }
 tokio-tungstenite= { version="0.19.0", optional=true}
 rand_core          ="0.6.4"
-# TODO we maybe want default-features = false, features = ["getrandom"]
+# TODO we maybe want default-features = false, features = ["getrandom"] (for wasm)
 
 [features]
 server = ["dep:axum", "dep:tokio-tungstenite"]
