--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -6,15 +6,14 @@ edition    ="2021"
 license    ="AGPL-3.0-or-later"
 
 [dependencies]
-async-trait   ="0.1.73"
-serde_json    ="1.0"
-entropy-shared={ path="../shared" }
-synedrion     ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
-serde         ={ version="1.0", features=["derive"] }
-subxt         ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0" }
-sp-core       ={ version="21.0.0", default-features=false }
-# TODO rm tokio features that dont play nice with wasm
-tokio              ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
+async-trait        ="0.1.73"
+serde_json         ="1.0"
+entropy-shared     ={ path="../shared" }
+synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+serde              ={ version="1.0", features=["derive"], default-features=false }
+subxt              ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0" }
+sp-core            ={ version="21.0.0", default-features=false }
+tokio              ={ version="1.16", features=["sync", "rt"] }
 x25519-dalek       ="2.0.0-pre.1"
 futures            ="0.3"
 entropy-constraints={ path="../constraints" }
@@ -22,11 +21,11 @@ hex                ="*"
 blake2             ="0.10.4"
 thiserror          ="1.0.40"
 snow               ="0.9.2"
+getrandom          ={ version="0.2", features=["js"] }
+rand_core          ={ version="0.6.4", features=["getrandom"] }
 
 axum             ={ version="0.6.18", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.19.0", optional=true }
-rand_core        ="0.6.4"
-# TODO we maybe want default-features = false, features = ["getrandom"] (for wasm)
 
 [features]
 server=["dep:axum", "dep:tokio-tungstenite"]
