--- a/crypto/shared/Cargo.toml
+++ b/crypto/shared/Cargo.toml
@@ -4,14 +4,23 @@ version="0.1.0"
 edition="2021"
 
 [dependencies]
-codec          ={ package="parity-scale-codec", version="3.0.0", default-features=false }
+frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false, optional=true }
+node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43", optional=true }
+codec          ={ package="parity-scale-codec", version="3.0.0", default-features=false, optional=true }
 scale-info     ={ version='2.0.1', default-features=false, features=['derive'] }
 serde          ={ version="1.0", default-features=false, features=["derive"] }
 serde_derive   ="1.0.147"
 sp-std         ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [features]
 default=["std"]
-std    =["codec/std", "scale-info/std", "serde/std", "frame-support/std", "sp-std/std"]
+std=[
+  "codec/std",
+  "scale-info/std",
+  "serde/std",
+  "frame-support/std",
+  "sp-std/std",
+  "dep:frame-support",
+  "dep:node-primitives",
+]
+wasm=["codec/std", "scale-info/std", "serde/std", "sp-std/std"]
