--- a/cliff.toml
+++ b/cliff.toml
@@ -1,4 +1,4 @@
-# git-cliff ~ default configuration file
+# git-cliff ~ configuration file
 # https://git-cliff.org/docs/configuration
 #
 # Lines starting with "#" are comments.
@@ -12,18 +12,36 @@ header="""
 All notable changes to this project will be documented in this file.\n
 """
 # template for the changelog body
-# https://tera.netlify.app/docs
+# https://keats.github.io/tera/docs/#introduction
 body="""
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    {% if previous.version %}\
+        ## [{{ version | trim_start_matches(pat="v") }}](<REPO>/compare/{{ previous.version }}..{{ version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
+    {% else %}\
+        ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    {% endif %}\
 {% else %}\
     ## [unreleased]
 {% endif %}\
+
+{% macro commit(commit) -%}
+    - {% if commit.scope %}*({{ commit.scope }})* {% endif %}{% if commit.breaking %}[**breaking**] {% endif %}\
+        {{ commit.message | upper_first }} - ([{{ commit.id | truncate(length=7, end="") }}](<REPO>/commit/{{ commit.id }}))\
+{% endmacro -%}
+
 {% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
-    {% for commit in commits %}
-        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}\
-    {% endfor %}
+    ### {{ group | striptags | trim | upper_first }}
+    {% for commit in commits
+    | filter(attribute="scope")
+    | sort(attribute="scope") %}
+        {{ self::commit(commit=commit) }}
+    {%- endfor -%}
+    {% raw %}\n{% endraw %}\
+    {%- for commit in commits %}
+        {%- if not commit.scope -%}
+            {{ self::commit(commit=commit) }}
+        {% endif -%}
+    {% endfor -%}
 {% endfor %}\n
 """
 # remove the leading and trailing whitespace from the template
@@ -34,35 +52,34 @@ footer="""
 """
 # postprocessors
 postprocessors=[
-  # { pattern = '<REPO>', replace = "https://github.com/orhun/git-cliff" }, # replace repository URL
+  { pattern='<REPO>', replace="https://github.com/orhun/git-cliff" }, # replace repository URL
 ]
+
 [git]
 # parse the commits based on https://www.conventionalcommits.org
-conventional_commits=true
+conventional_commits=false
 # filter out the commits that are not conventional
-filter_unconventional=true
+filter_unconventional=false
 # process each line of a commit as an individual commit
 split_commits=false
 # regex for preprocessing the commit messages
-commit_preprocessors=[
-  # { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](<REPO>/issues/${2}))"}, # replace issue numbers
-]
+commit_preprocessors=[{ pattern='\((\w+\s)?#([0-9]+)\)', replace="([#${2}](<REPO>/issues/${2}))" }]
 # regex for parsing and grouping commits
 commit_parsers=[
-  { message="^feat", group="Features" },
-  { message="^fix", group="Bug Fixes" },
-  { message="^doc", group="Documentation" },
-  { message="^perf", group="Performance" },
-  { message="^refactor", group="Refactor" },
-  { message="^style", group="Styling" },
-  { message="^test", group="Testing" },
+  { message="^feat", group="<!-- 0 -->⛰️  Features" },
+  { message="^fix", group="<!-- 1 -->🐛 Bug Fixes" },
+  { message="^doc", group="<!-- 3 -->📚 Documentation" },
+  { message="^perf", group="<!-- 4 -->⚡ Performance" },
+  { message="^refactor", group="<!-- 2 -->🚜 Refactor" },
+  { message="^style", group="<!-- 5 -->🎨 Styling" },
+  { message="^test", group="<!-- 6 -->🧪 Testing" },
   { message="^chore\\(release\\): prepare for", skip=true },
   { message="^chore\\(deps\\)", skip=true },
   { message="^chore\\(pr\\)", skip=true },
   { message="^chore\\(pull\\)", skip=true },
-  { message="^chore|ci", group="Miscellaneous Tasks" },
-  { body=".*security", group="Security" },
-  { message="^revert", group="Revert" },
+  { message="^chore|ci", group="<!-- 7 -->⚙️ Miscellaneous Tasks" },
+  { body=".*security", group="<!-- 8 -->🛡️ Security" },
+  { message="^revert", group="<!-- 9 -->◀️ Revert" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits=false
@@ -71,12 +88,10 @@ filter_commits=false
 # glob pattern for matching git tags
 tag_pattern="v[0-9]*"
 # regex for skipping tags
-skip_tags="v0.1.0-beta.1"
+skip_tags="beta|alpha"
 # regex for ignoring tags
-ignore_tags=""
+ignore_tags="rc"
 # sort the tags topologically
 topo_order=false
 # sort the commits inside sections by oldest/newest order
-sort_commits="oldest"
-# limit the number of commits included in the changelog.
-# limit_commits = 42
+sort_commits="newest"
