--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -3,8 +3,6 @@ name   ="kvdb"
 version="0.1.0"
 edition="2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 # Common
 rand     ={ version="0.8", default-features=false }
@@ -27,8 +25,9 @@ tokio  ={ version="1.16", features=["macros", "sync", "fs", "rt-multi-thread", "
 tracing={ version="0.1", default-features=false }
 
 # Misc
-sled   ="0.34.7"
-bincode="1.3.3"
+sled            ="0.34.7"
+bincode         ="1.3.3"
+entropy-protocol={ path="../protocol" }
 
 [dev-dependencies]
 serial_test="0.6.0"
