--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -35,8 +35,9 @@ parity-scale-codec="3.4.0"
 sp-core           ={ version="21.0.0", default-features=false }
 
 # Entropy
-entropy-shared={ path="../shared" }
-kvdb          ={ path="../kvdb", default-features=false }
+entropy-shared  ={ path="../shared" }
+kvdb            ={ path="../kvdb", default-features=false }
+entropy-protocol={ path="../protocol", features=["server"] }
 
 # Constraints
 entropy-constraints={ path="../constraints" }
@@ -60,6 +61,7 @@ async-stream     ="0.3.5"
 snow             ="0.9.2"
 sha3             ="0.10.8"
 async-trait      ="0.1.73"
+subxt-signer     ="0.31.0"
 
 [dev-dependencies]
 testing-utils     ={ path="../testing-utils" }
