--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -9,13 +9,13 @@ license    ="AGPL-3.0-or-later"
 async-trait    ="0.1.73"
 serde_json     ="1.0"
 entropy-shared ={ path="../shared", default-features=false }
-synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.10" }
 serde          ={ version="1.0", features=["derive"], default-features=false }
 serde-big-array="0.5.1"
 subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0", default-features=false }
 subxt-signer   ={ version="0.31.0", features=[] }
 tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
-x25519-dalek   ="2.0.0-pre.1"
+x25519-dalek   ={ version="2.0.0", features=["static_secrets"]}
 futures        ="0.3"
 hex            ="*"
 blake2         ="0.10.4"
