--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -10,7 +10,7 @@ serde_json         ="1.0"
 anyhow             ="1.0.53"
 thiserror          ="1.0.47"
 blake2             ="0.10.4"
-x25519-dalek   ={ version="2.0.0", features=["static_secrets"]}
+x25519-dalek       ="2.0.0-pre.1"
 chacha20poly1305   ="0.10.1"
 rand_core          ="0.6.4"
 generic-array      ="0.14.6"
@@ -19,7 +19,7 @@ hex                ="*"
 reqwest-eventsource="0.4"
 serde_derive       ="1.0.147"
 
-synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.10" }
+synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 
 # Async
 futures="0.3"
