--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -33,6 +33,8 @@ tokio-tungstenite={ version="0.19.0", optional=true }
 gloo-net            ={ version="0.4.0", default-features=false, features=["websocket"], optional=true }
 wasm-bindgen-futures={ version="0.4.37", optional=true }
 wasm-bindgen        ={ version="0.2.87", optional=true }
+wasm-bindgen-derive ={ version="0.2", optional=true }
+js-sys              ={ version="0.3.64", optional=true }
 
 [features]
 server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat"]
@@ -42,6 +44,8 @@ wasm=[
   "dep:gloo-net",
   "dep:wasm-bindgen-futures",
   "dep:wasm-bindgen",
+  "dep:wasm-bindgen-derive",
+  "dep:js-sys",
 ]
 
 [lib]
