--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -35,6 +35,8 @@ generic-array   ="0.14.6"
 entropy-protocol={ path="../protocol", features=["server"] }
 reqwest         ={ version="0.11", features=["json", "stream"] }
 sha3            ="0.10.8"
+base64          ="0.13.0"
+synedrion       ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 # TODO rm unneeded features
 tokio={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 hex  ="0.4.3"
