--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,15 @@
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
+
 root = true
 
 [*]
 indent_style=space
-indent_size=2
-tab_width=2
+indent_size=4
+tab_width=4
 end_of_line=lf
 charset=utf-8
 trim_trailing_whitespace=true
 insert_final_newline = true
-
-[*.{rs,toml}]
-indent_style=tab
-indent_size=tab
-tab_width=4
 max_line_length=100
