--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,25 +8,18 @@
 # a more canonical set of environments and configuration files.
 ---
 version: "3.8"
-name: entropy
+name: entropy-local-devnet
 
 secrets:
   credentials:
-    file: ~/.entropy.auth.sh
+    file: ${XDG_DATA_HOME:-~/.local/share}/entropy-cryptography/.entropy.auth.sh
 
 services:
-  # Threshold Signature Scheme server
   # In a local devnet setup, for now, this is "Alice's TSS server."
   alice-tss-server:
-    build:
-      args:
-        PACKAGE: server
-      ssh:
-        - default
-      secrets:
-        - credentials
-      tags:
-        - entropy:tss-server
+    extends:
+      file: docker-compose-common.yaml
+      service: tss-server
     ports:
       - "127.0.0.1:3001:3001/tcp"
     command:
@@ -36,25 +29,12 @@ services:
       - "--chain-endpoint"
       - "ws://alice-chain-node:9944"
 
-  # Sometimes also called simply a "chain," or a "validator."
   # In a local devnet setup, for now, this is "Alice's chain."
   alice-chain-node:
-    build:
-      ssh:
-        - default
-      secrets:
-        - credentials
-      tags:
-        - entropy:chain-node
-    depends_on:
-      - alice-tss-server
+    extends:
+      file: docker-compose-common.yaml
+      service: chain-node
     ports:
-      # Enables other chain nodes speak to the validator. We comment
-      # this out because we're working only within the Docker network
-      # layer, not the host's network stack. I.e., the port is open
-      # locally, but we do not publish it to the Docker host itself.
-      #- "127.0.0.1:30333:30333/tcp" # P2P Port.
-      # Enables network clients to speak to the chain node's REST API.
       - "127.0.0.1:9944:9944/tcp"   # "RPC Port."
     command:
       - "--chain"
@@ -64,18 +44,18 @@ services:
       - ".entropy/alice"
       - "--rpc-port"
       - "9944"
-      - "--unsafe-rpc-external" # Intentional, for TSS's access.
       - "--rpc-cors"
       - "all"
+      - "--unsafe-rpc-external" # Intentional, for TSS's access.
       - "--node-key=0000000000000000000000000000000000000000000000000000000000000001"
       - "--tss-server-endpoint"
       - "http://alice-tss-server:3001"
 
   # "Bob's TSS server."
   bob-tss-server:
-    image: entropy:tss-server
-    depends_on:
-      - alice-tss-server
+    extends:
+      file: docker-compose-common.yaml
+      service: tss-server
     ports:
       - "127.0.0.1:3002:3001/tcp"
     command:
@@ -87,9 +67,9 @@ services:
 
   # "Bob's chain node."
   bob-chain-node:
-    image: entropy:chain-node
-    depends_on:
-      - bob-tss-server
+    extends:
+      file: docker-compose-common.yaml
+      service: chain-node
     ports:
       - "127.0.0.1:9945:9944/tcp"
     command:
@@ -100,9 +80,9 @@ services:
       - ".entropy/bob"
       - "--rpc-port"
       - "9944"
-      - "--unsafe-rpc-external" # Intentional, for TSS's access.
       - "--rpc-cors"
       - "all"
+      - "--unsafe-rpc-external" # Intentional, for TSS's access.
       - "--bootnodes"
       - "/dns4/alice-chain-node/tcp/30333/p2p/12D3KooWEyoppNCUx8Yx66oV9fJnriXwCcXwDDUA2kj6vnc6iDEp"
       - "--tss-server-endpoint"
